DP-29047: Style fix - remove horiz rule on mobile on info detail page for cards

--- a/packages/assets/scss/02-molecules/_section-links.scss
+++ b/packages/assets/scss/02-molecules/_section-links.scss
@@ -326,7 +326,7 @@
   }
 
   &__mobile-title {
-    border-bottom-color: $c-bd-divider;
+    border-bottom-color: unset;
 
     svg {
       fill: rgba($c-font-link,.5);
